include/pr/view3d/dll/view3d.h

	
	struct View3DV2;
	struct View3DV4;
	struct View3DM4x4;
	struct View3DBBox;
	struct View3DVertex;
	using View3DColour = unsigned int;
	using View3D_ReportErrorCB = void (__stdcall *)(void* ctx, wchar_t const* msg, wchar_t const* filepath, int line, int64_t pos);
	enum class EView3DCullMode :int
	{
		Default = 0,
		None    = D3D11_CULL_MODE::D3D11_CULL_NONE,
		Front   = D3D11_CULL_MODE::D3D11_CULL_FRONT,
		Back    = D3D11_CULL_MODE::D3D11_CULL_BACK,
	};
	enum class EView3DGeom :int 
	{
		Unknown = 0,
		Vert    = 1 << 0, 
		Colr    = 1 << 1, 
		Norm    = 1 << 2, 
		Tex0    = 1 << 3, 
		_flags_enum = 0,
	};
	enum class EView3DNuggetFlag :int
	{
		None = 0,
		Hidden = 1 << 0,
		GeometryHasAlpha = 1 << 1,
		TintHasAlpha = 1 << 2,
		ShadowCastExclude = 1 << 3,
		_flags_enum = 0,
	};
	enum class EView3DShaderCS :int
	{
		None = 0,
	};
	enum class EView3DAnimCommand : int
	{
		Reset, 
		Play,  
		Stop,  
		Step,  
	};
	enum class EView3DUpdateObject :unsigned int 
	{
		None         = 0U,
		All          = ~0U,
		Name         = 1 << 0,
		Model        = 1 << 1,
		Transform    = 1 << 2,
		Children     = 1 << 3,
		Colour       = 1 << 4,
		ColourMask   = 1 << 5,
		Reflectivity = 1 << 6,
		Flags        = 1 << 7,
		Animation    = 1 << 8,
		_flags_enum = 0,
	};
	enum class EView3DGizmoState :int 
	{
		StartManip,
		Moving,
		Commit,
		Revert,
	};
	enum class EView3DNavOp :int 
	{
		None      = 0,
		Translate = 1 << 0,
		Rotate    = 1 << 1,
		Zoom      = 1 << 2,
		_flags_enum = 0,
	};
	enum class EView3DCameraLockMask :int 
	{
		None           = 0,
		TransX         = 1 << 0,
		TransY         = 1 << 1,
		TransZ         = 1 << 2,
		RotX           = 1 << 3,
		RotY           = 1 << 4,
		RotZ           = 1 << 5,
		Zoom           = 1 << 6,
		CameraRelative = 1 << 7,
		All            = (1 << 7) - 1, 
	};
	enum class EView3DFlags :int 
	{
		None = 0,
		Hidden = 1 << 0,
		Wireframe = 1 << 1,
		NoZTest = 1 << 2,
		NoZWrite = 1 << 3,
		Normals = 1 << 4,
		NonAffine = 1 << 5,
		Selected = 1 << 8,
		BBoxExclude = 1 << 9,
		SceneBoundsExclude = 1 << 10,
		HitTestExclude = 1 << 11,
		ShadowCastExclude = 1 << 12,
		_flags_enum = 0,
	};
	enum class EView3DHitTestFlags :int
	{
		Faces = 1 << 0,
		Edges = 1 << 1,
		Verts = 1 << 2,
		_flags_enum  = 0,
	};
	enum class EView3DSettings :int
	{
		None = 0,
		General                     = 1 << 16,
		General_FocusPointVisible   = General | 1 << 0,
		General_OriginPointVisible  = General | 1 << 1,
		General_SelectionBoxVisible = General | 1 << 2,
		Scene                  = 1 << 17,
		Scene_BackgroundColour = Scene | 1 << 0,
		Scene_Multisampling    = Scene | 1 << 1,
		Scene_FilllMode        = Scene | 1 << 2,
		Scene_CullMode         = Scene | 1 << 3,
		Scene_Viewport         = Scene | 1 << 4,
		Camera              = 1 << 18,
		Camera_Position     = Camera | 1 << 0,
		Camera_FocusDist    = Camera | 1 << 1,
		Camera_Orthographic = Camera | 1 << 2,
		Camera_Aspect       = Camera | 1 << 3,
		Camera_Fov          = Camera | 1 << 4,
		Camera_ClipPlanes   = Camera | 1 << 5,
		Camera_LockMask     = Camera | 1 << 6,
		Camera_AlignAxis    = Camera | 1 << 7,
		Lighting     = 1 << 19,
		Lighting_All = Lighting | 1 << 0,
		Diagnostics                    = 1 << 20,
		Diagnostics_BBoxesVisible      = Diagnostics | 1 << 0,
		Diagnostics_NormalsLength      = Diagnostics | 1 << 1,
		Diagnostics_NormalsColour      = Diagnostics | 1 << 2,
		Diagnostics_FillModePointsSize = Diagnostics | 1 << 3,
		_flags_enum = 0,
	};
	struct View3DV2
	{
		float x, y;
	};
	struct View3DV4
	{
		float x, y, z, w;
	};
	struct View3DM4x4
	{
		View3DV4 x, y, z, w;
	};
	struct View3DBBox
	{
		View3DV4 centre;
		View3DV4 radius;
	};
	struct View3DVertex
	{
		View3DV4 pos;
		View3DV4 norm;
		View3DV2 tex;
		View3DColour col;
		UINT32 pad;
	};
	struct View3DNugget
	{
		EView3DTopo       m_topo;
		EView3DGeom       m_geom;
		EView3DCullMode   m_cull_mode;
		EView3DFillMode   m_fill_mode;
		UINT32            m_v0, m_v1;       
		UINT32            m_i0, m_i1;       
		EView3DNuggetFlag m_nflags;         
		BOOL              m_range_overlaps; 
		View3DMaterial    m_mat;
	};
	struct View3DLight
	{
		View3DV4     m_position;
		View3DV4     m_direction;
		EView3DLight m_type;
		View3DColour m_ambient;
		View3DColour m_diffuse;
		View3DColour m_specular;
		float        m_specular_power;
		float        m_range;
		float        m_falloff;
		float        m_inner_angle;
		float        m_outer_angle;
		float        m_cast_shadow;
		BOOL         m_cam_relative;
		BOOL         m_on;
	};
	struct View3DHitTestRay
	{
		View3DV4 m_ws_origin;
		View3DV4 m_ws_direction;
	};
	struct View3DHitTestResult
	{
		View3DV4 m_ws_ray_origin;
		View3DV4 m_ws_ray_direction;
		View3DV4 m_ws_intercept;
		View3DObject m_obj;
		float m_distance;
		EView3DSnapType m_snap_type;
	};
	struct View3DSceneChanged
	{
		EView3DSceneChanged m_change_type;
		GUID const* m_ctx_ids;
		int m_count;
		View3DObject m_object;
	};
	using View3D_SettingsChangedCB     = void (__stdcall *)(void* ctx, View3DWindow window, EView3DSettings setting);
	using View3D_AddFileProgressCB     = void (__stdcall *)(void* ctx, GUID const& context_id, wchar_t const* filepath, long long file_offset, BOOL complete, BOOL* cancel);
	using View3D_OnAddCB               = void (__stdcall *)(void* ctx, GUID const& context_id, BOOL before);
	using View3D_SourcesChangedCB      = void (__stdcall *)(void* ctx, EView3DSourcesChangedReason reason, BOOL before);
	using View3D_InvalidatedCB         = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_RenderCB              = void (__stdcall *)(void* ctx, View3DWindow window);
	using View3D_SceneChangedCB        = void (__stdcall *)(void* ctx, View3DWindow window, View3DSceneChanged const&);
	using View3D_AnimationCB           = void (__stdcall *)(void* ctx, View3DWindow window, EView3DAnimCommand command, double clock);
	using View3D_GizmoMovedCB          = void (__stdcall *)(void* ctx, View3DGizmo gizmo, EView3DGizmoState state);
	using View3D_EditObjectCB          = void (__stdcall *)(
		void* ctx,             
		UINT32 vcount,         
		UINT32 icount,         
		UINT32 ncount,         
		View3DVertex* verts,   
		UINT16* indices,       
		View3DNugget* nuggets, 
		UINT32& new_vcount,    
		UINT32& new_icount,    
		UINT32& new_ncount);   
	VIEW3D_API BOOL           __stdcall View3D_WindowAnimating          (View3DWindow window);
	VIEW3D_API double         __stdcall View3D_WindowAnimTimeGet        (View3DWindow window);
	VIEW3D_API void           __stdcall View3D_WindowAnimTimeSet        (View3DWindow window, double time_s);
	VIEW3D_API void           __stdcall View3D_WindowAnimControl        (View3DWindow window, EView3DAnimCommand command, double time);
	VIEW3D_API void           __stdcall View3D_WindowAnimEventCBSet     (View3DWindow window, View3D_AnimationCB anim_cb, void* ctx, BOOL add);
	VIEW3D_API void           __stdcall View3D_WindowHitTestObjects     (View3DWindow window, View3DHitTestRay const* rays, View3DHitTestResult* hits, int ray_count, float snap_distance, EView3DHitTestFlags flags, View3DObject const* objects, int object_count);
	VIEW3D_API void           __stdcall View3D_WindowHitTestByCtx       (View3DWindow window, View3DHitTestRay const* rays, View3DHitTestResult* hits, int ray_count, float snap_distance, EView3DHitTestFlags flags, GUID const* context_ids, int include_count, int exclude_count);
	VIEW3D_API View3DV2       __stdcall View3D_WindowDpiScale           (View3DWindow window);
	VIEW3D_API void           __stdcall View3D_WindowEnvMapSet          (View3DWindow window, View3DCubeMap env_map);
	VIEW3D_API void                  __stdcall View3D_CameraToWorldGet      (View3DWindow window, View3DM4x4& c2w);
	VIEW3D_API void                  __stdcall View3D_CameraToWorldSet      (View3DWindow window, View3DM4x4 const& c2w);
	VIEW3D_API void                  __stdcall View3D_CameraPositionSet     (View3DWindow window, View3DV4 position, View3DV4 lookat, View3DV4 up);
	VIEW3D_API void                  __stdcall View3D_CameraCommit          (View3DWindow window);
	VIEW3D_API BOOL                  __stdcall View3D_CameraOrthographicGet (View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraOrthographicSet (View3DWindow window, BOOL on);
	VIEW3D_API float                 __stdcall View3D_CameraFocusDistanceGet(View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraFocusDistanceSet(View3DWindow window, float dist);
	VIEW3D_API void                  __stdcall View3D_CameraFocusPointGet   (View3DWindow window, View3DV4& position);
	VIEW3D_API void                  __stdcall View3D_CameraFocusPointSet   (View3DWindow window, View3DV4 position);
	VIEW3D_API float                 __stdcall View3D_CameraAspectGet       (View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraAspectSet       (View3DWindow window, float aspect);
	VIEW3D_API void                  __stdcall View3D_CameraFovSet          (View3DWindow window, float fovX, float fovY);
	VIEW3D_API void                  __stdcall View3D_CameraBalanceFov      (View3DWindow window, float fov);
	VIEW3D_API void                  __stdcall View3D_CameraClipPlanesGet   (View3DWindow window, float& near_, float& far_, BOOL focus_relative);
	VIEW3D_API void                  __stdcall View3D_CameraClipPlanesSet   (View3DWindow window, float near_, float far_, BOOL focus_relative);
	VIEW3D_API EView3DCameraLockMask __stdcall View3D_CameraLockMaskGet     (View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraLockMaskSet     (View3DWindow window, EView3DCameraLockMask mask);
	VIEW3D_API View3DV4              __stdcall View3D_CameraAlignAxisGet    (View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraAlignAxisSet    (View3DWindow window, View3DV4 axis);
	VIEW3D_API void                  __stdcall View3D_CameraResetZoom       (View3DWindow window);
	VIEW3D_API float                 __stdcall View3D_CameraZoomGet         (View3DWindow window);
	VIEW3D_API void                  __stdcall View3D_CameraZoomSet         (View3DWindow window, float zoom);
	VIEW3D_API void                  __stdcall View3D_ResetView             (View3DWindow window, View3DV4 forward, View3DV4 up, float dist, BOOL preserve_aspect, BOOL commit);
	VIEW3D_API void                  __stdcall View3D_ResetViewBBox         (View3DWindow window, View3DBBox bbox, View3DV4 forward, View3DV4 up, float dist, BOOL preserve_aspect, BOOL commit);
	VIEW3D_API BOOL                  __stdcall View3D_MouseNavigate         (View3DWindow window, View3DV2 ss_pos, EView3DNavOp nav_op, BOOL nav_start_or_end);
	VIEW3D_API BOOL                  __stdcall View3D_MouseNavigateZ        (View3DWindow window, View3DV2 ss_pos, float delta, BOOL along_ray);
	VIEW3D_API BOOL                  __stdcall View3D_Navigate              (View3DWindow window, float dx, float dy, float dz);
	VIEW3D_API View3DV2              __stdcall View3D_SSPointToNSSPoint     (View3DWindow window, View3DV2 screen);
	VIEW3D_API View3DV4              __stdcall View3D_NSSPointToWSPoint     (View3DWindow window, View3DV4 screen);
	VIEW3D_API View3DV4              __stdcall View3D_WSPointToNSSPoint     (View3DWindow window, View3DV4 world);
	VIEW3D_API void                  __stdcall View3D_NSSPointToWSRay       (View3DWindow window, View3DV4 screen, View3DV4& ws_point, View3DV4& ws_direction);
	VIEW3D_API EView3DNavOp          __stdcall View3D_MouseBtnToNavOp       (int mk);
	VIEW3D_API BOOL        __stdcall View3D_LightPropertiesGet       (View3DWindow window, View3DLight& light);
	VIEW3D_API void        __stdcall View3D_LightPropertiesSet       (View3DWindow window, View3DLight const& light);
	VIEW3D_API void        __stdcall View3D_LightSource              (View3DWindow window, View3DV4 position, View3DV4 direction, BOOL camera_relative);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateP3DFile      (char const* name, View3DColour colour, wchar_t const* p3d_filepath, GUID const* context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateP3DStream    (char const* name, View3DColour colour, size_t size, void const* p3d_data, GUID const* context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreate             (char const* name, View3DColour colour, int vcount, int icount, int ncount, View3DVertex const* verts, UINT16 const* indices, View3DNugget const* nuggets, GUID const& context_id);
	VIEW3D_API View3DObject      __stdcall View3D_ObjectCreateInstance     (View3DObject object);
	VIEW3D_API void              __stdcall View3D_ObjectEdit               (View3DObject object, View3D_EditObjectCB edit_cb, void* ctx);
	VIEW3D_API void              __stdcall View3D_ObjectUpdate             (View3DObject object, wchar_t const* ldr_script, EView3DUpdateObject flags);
	VIEW3D_API void              __stdcall View3D_ObjectDelete             (View3DObject object);
	VIEW3D_API int             __stdcall View3D_MultiSamplingGet       (View3DWindow window);
	VIEW3D_API void            __stdcall View3D_MultiSamplingSet       (View3DWindow window, int multisampling);
	VIEW3D_API BOOL       __stdcall View3D_DepthBufferEnabledGet    (View3DWindow window);
	VIEW3D_API void       __stdcall View3D_DepthBufferEnabledSet    (View3DWindow window, BOOL enabled);