projects/rylogic/Rylogic.Gfx/src/View3d/View3d.cs


		// Clear the 'invalidated' state of the window.
		[DllImport(Dll)] private static extern void View3D_WindowValidate(HWindow window);

		// Get/Set the window background colour
		[DllImport(Dll)] private static extern uint View3D_WindowBackgroundColourGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowBackgroundColourSet(HWindow window, uint argb);

		// Get/Set the fill mode for the window
		[DllImport(Dll)] private static extern EFillMode View3D_WindowFillModeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowFillModeSet(HWindow window, EFillMode mode);

		// Get/Set the cull mode for a faces in window
		[DllImport(Dll)] private static extern ECullMode View3D_WindowCullModeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowCullModeSet(HWindow window, ECullMode mode);

		// Get/Set the multi-sampling mode for a window
		[DllImport(Dll)] private static extern int View3D_MultiSamplingGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_MultiSamplingSet(HWindow window, int multisampling);

		// Control animation
		[DllImport(Dll)] private static extern void View3D_WindowAnimControl(HWindow window, EAnimCommand command, double time_s);

		// Set the callback for animation events
		[DllImport(Dll)] private static extern void View3D_WindowAnimEventCBSet(HWindow window, AnimationCB anim_cb, bool add);

		// Get/Set the animation time
		[DllImport(Dll)] private static extern bool View3D_WindowAnimating(HWindow window);
		[DllImport(Dll)] private static extern double View3D_WindowAnimTimeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowAnimTimeSet(HWindow window, double time_s);

		// Return the DPI of the monitor that 'window' is displayed on
		[DllImport(Dll)] private static extern v2 View3D_WindowDpiScale(HWindow window);

		// Set the global environment map for the window
		[DllImport(Dll)] private static extern void View3D_WindowEnvMapSet(HWindow window, CubeMap env_map);

		// Enable/Disable the depth buffer
		[DllImport(Dll)] private static extern bool View3D_DepthBufferEnabledGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DepthBufferEnabledSet(HWindow window, bool enabled);

		// Cast a ray into the scene, returning information about what it hit.
		[DllImport(Dll)] private static extern void View3D_WindowHitTestObjects(HWindow window, IntPtr rays, IntPtr hits, int ray_count, ESnapMode snap_mode, float snap_distance, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 7)] HObject[] objects, int object_count);
		[DllImport(Dll)] private static extern void View3D_WindowHitTestByCtx(HWindow window, IntPtr rays, IntPtr hits, int ray_count, ESnapMode snap_mode, float snap_distance, GuidPredCB pred);

		// Camera *********************************

		// Position the camera and focus distance
		[DllImport(Dll)] private static extern void View3D_CameraPositionSet(HWindow window, v4 position, v4 lookat, v4 up);

		// Get/Set the current camera to world transform
		[DllImport(Dll)] private static extern m4x4 View3D_CameraToWorldGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraToWorldSet(HWindow window, ref m4x4 c2w);

		// Move the camera to a position that can see the whole scene. Set 'dist' to 0 to preserve the FoV, or a distance to set the FoV
		[DllImport(Dll)] private static extern void View3D_ResetView(HWindow window, v4 forward, v4 up, float dist, bool preserve_aspect, bool commit);

		// Reset the camera to view a bbox. Set 'dist' to 0 to preserve the FoV, or a distance to set the FoV
		[DllImport(Dll)] private static extern void View3D_ResetViewBBox(HWindow window, BBox bbox, v4 forward, v4 up, float dist, bool preserve_aspect, bool commit);

		// Enable/Disable orthographic projection
		[DllImport(Dll)] private static extern bool View3D_CameraOrthographicGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraOrthographicSet(HWindow window, bool on);

		// Get/Set the distance to the camera focus point
		[DllImport(Dll)] private static extern float View3D_CameraFocusDistanceGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFocusDistanceSet(HWindow window, float dist);

		// Get/Set the camera focus point position
		[DllImport(Dll)] private static extern v4 View3D_CameraFocusPointGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFocusPointSet(HWindow window, v4 position);

		// Get/Set bounds on the camera focus point position
		[DllImport(Dll)] private static extern BBox View3D_CameraFocusBoundsGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFocusBoundsSet(HWindow window, BBox bounds);

		// Get/Set the aspect ratio for the camera field of view
		[DllImport(Dll)] private static extern float View3D_CameraAspectGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraAspectSet(HWindow window, float aspect);

		// Get/Set both the X and Y fields of view (i.e. set the aspect ratio). Null fov means don't change the current value.
		[DllImport(Dll)] private static extern v2 View3D_CameraFovGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraFovSet(HWindow window, v2 fov);

		// Adjust the FocusDist, FovX, and FovY so that the average FOV equals 'fov'
		[DllImport(Dll)] private static extern void View3D_CameraBalanceFov(HWindow window, float fov);

		// Get/Set (using fov and focus distance) the size of the perpendicular area visible to the camera at 'dist' (in world space). Use 'focus_dist != 0' to set a specific focus distance
		[DllImport(Dll)] private static extern v2 View3D_CameraViewRectAtDistanceGet(HWindow window, float dist);
		[DllImport(Dll)] private static extern void View3D_CameraViewRectAtDistanceSet(HWindow window, v2 rect, float focus_dist);

		// Get/Set the near and far clip planes for the camera
		[DllImport(Dll)] private static extern v2 View3D_CameraClipPlanesGet(HWindow window, EClipPlanes flags);
		[DllImport(Dll)] private static extern void View3D_CameraClipPlanesSet(HWindow window, float near, float far, EClipPlanes flags);

		// Get/Set the scene camera lock mask
		[DllImport(Dll)] private static extern ECameraLockMask View3D_CameraLockMaskGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraLockMaskSet(HWindow window, ECameraLockMask mask);
	
		// Get/Set the camera align axis
		[DllImport(Dll)] private static extern v4 View3D_CameraAlignAxisGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraAlignAxisSet(HWindow window, v4 axis);
	
		// Reset to the default zoom
		[DllImport(Dll)] private static extern void View3D_CameraResetZoom(HWindow window);

		// Get/Set the FOV zoom
		[DllImport(Dll)] private static extern float View3D_CameraZoomGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_CameraZoomSet(HWindow window, float zoom);

		// Commit the current O2W position as the reference position
		[DllImport(Dll)] private static extern void View3D_CameraCommit(HWindow window);

		// Navigation *****************************

		// Direct movement of the camera
		[DllImport(Dll)] private static extern bool View3D_Navigate(HWindow window, float dx, float dy, float dz);

		// Move the scene camera using the mouse
		[DllImport(Dll)] private static extern bool View3D_MouseNavigate(HWindow window, v2 ss_point, ENavOp nav_op, bool nav_start_or_end);
		[DllImport(Dll)] private static extern bool View3D_MouseNavigateZ(HWindow window, v2 ss_point, float delta, bool along_ray);

		// Convert an MK_ macro to a default navigation operation
		[DllImport(Dll)] private static extern ENavOp View3D_MouseBtnToNavOp(EMouseBtns mk);

		// Convert a point between 'window' screen space and normalised screen space
		[DllImport(Dll)] private static extern v2 View3D_SSPointToNSSPoint(HWindow window, v2 screen);
		[DllImport(Dll)] private static extern v2 View3D_NSSPointToSSPoint(HWindow window, v2 nss_point);

		// Convert a point between world space and normalised screen space.
		// The x,y components of 'screen' should be in normalised screen space, i.e. (-1,-1)->(1,1)
		// The z component should be the world space distance from the camera
		[DllImport(Dll)] private static extern v4 View3D_NSSPointToWSPoint(HWindow window, v4 screen);
		[DllImport(Dll)] private static extern v4 View3D_WSPointToNSSPoint(HWindow window, v4 world);

		// Return a point and direction in world space corresponding to a normalised screen space point.
		// The x,y components of 'screen' should be in normalised screen space, i.e. (-1,-1)->(1,1)
		// The z component should be the world space distance from the camera
		[DllImport(Dll)] private static extern void View3D_NSSPointToWSRay(HWindow window, v4 screen, out v4 ws_point, out v4 ws_direction);

		// Lights *********************************

		// Get/Set the properties of the global light
		[DllImport(Dll)] private static extern LightInfo View3D_LightPropertiesGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_LightPropertiesSet(HWindow window, ref LightInfo light);
	
		// Set the global light source for a window
		[DllImport(Dll)] private static extern void View3D_LightSource(HWindow window, v4 position, v4 direction, bool camera_relative);

		// Objects ********************************

		// Notes:
		// 'name' parameter on object get/set functions:
		//   If 'name' is null, then the state of the root object is returned
		//   If 'name' begins with '#' then the remainder of the name is treated as a regular expression

		// Create an object from provided buffers
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreate([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, IntPtr verts, IntPtr indices, IntPtr nuggets, ref Guid context_id);

		// Create an graphics object from ldraw script, either a string or a file 
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateLdrA([MarshalAs(UnmanagedType.LPStr)] string ldr_script, bool file, ref Guid context_id, ref Includes includes);
		[DllImport(Dll, CharSet = CharSet.Unicode)] private static extern HObject View3D_ObjectCreateLdrW([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, bool file, ref Guid context_id, ref Includes includes);

		// Load a p3d model file as a view3d object
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateP3DFile([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, [MarshalAs(UnmanagedType.LPStr)] string p3d_filepath, ref Guid context_id);

		// Load a p3d model in memory as a view3d object
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateP3DStream([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int size, IntPtr p3d_data, ref Guid context_id);

		// Create an ldr object using a callback to populate the model data.
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern HObject View3D_ObjectCreateWithCallback([MarshalAs(UnmanagedType.LPStr)] string name, uint colour, int vcount, int icount, int ncount, EditObjectCBInternal edit_cb, ref Guid context_id);
		[DllImport(Dll)] private static extern void View3D_ObjectEdit(HObject obj, EditObjectCBInternal edit_cb);

		// Replace the model and all child objects of 'obj' with the results of 'ldr_script'
		[DllImport(Dll)] private static extern void View3D_ObjectUpdate(HObject obj, [MarshalAs(UnmanagedType.LPWStr)] string ldr_script, EUpdateObject flags);

		// Delete an object, freeing its resources
		[DllImport(Dll)] private static extern void View3D_ObjectDelete(HObject obj);

		// Create an instance of 'obj'
		[DllImport(Dll)] private static extern HObject View3D_ObjectCreateInstance(HObject obj);
